# mflux-mcp

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  REWRITE-PLAN.md  agent-harness-kit.config.ts  health.sh  job_queue.py  jobs.db  mflux_cache.py  opencode.json  package-lock.json  package.json  pyproject.toml  server.py  subprocess_runner.py  test.db  worker.py
.harness/: feature_list.json  harness.db-shm  harness.db-wal
.opencode/agents/: builder.md  explorer.md  lead.md  reviewer.md
tests/: conftest.py  test_job_queue.py  test_model_cache.py  test_server.py  test_subprocess_runner.py  test_worker.py
