[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mflux-mcp"
version = "0.1.0"
description = "MCP server exposing mflux image generation to LLM agents"
requires-python = ">=3.12"
dependencies = [
    "mflux",
    "fastmcp",
    "mcp",
]

[project.scripts]
mflux-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
py-modules = ["server", "mflux_cache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
